TiePie Handyscope HS5/TiePieLib/+LibTiePie/LibTiePieHeaders/LibTiePie.pas

function ScpChGetCouplings( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetCouplings'{$endif};
function ScpChGetCoupling( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetCoupling'{$endif};
function ScpChSetCoupling( hDevice : TLibTiePieHandle ; wCh : Word ; qwCoupling : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetCoupling'{$endif};
function ScpChGetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetEnabled'{$endif};
function ScpChSetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetEnabled'{$endif};
function ScpChGetProbeGain( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetProbeGain'{$endif};
function ScpChSetProbeGain( hDevice : TLibTiePieHandle ; wCh : Word ; dProbeGain : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetProbeGain'{$endif};
function ScpChGetProbeOffset( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetProbeOffset'{$endif};
function ScpChSetProbeOffset( hDevice : TLibTiePieHandle ; wCh : Word ; dProbeOffset : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetProbeOffset'{$endif};
function ScpChGetAutoRanging( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetAutoRanging'{$endif};
function ScpChSetAutoRanging( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetAutoRanging'{$endif};
function ScpChGetRanges( hDevice : TLibTiePieHandle ; wCh : Word ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetRanges'{$endif};
function ScpChGetRangesEx( hDevice : TLibTiePieHandle ; wCh : Word ; qwCoupling : UInt64 ; pList : PDouble ; dwLength : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetRangesEx'{$endif};
function ScpChGetRange( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetRange'{$endif};
function ScpChSetRange( hDevice : TLibTiePieHandle ; wCh : Word ; dRange : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetRange'{$endif};
function ScpChHasSafeGround( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChHasSafeGround'{$endif};
function ScpChGetSafeGroundEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetSafeGroundEnabled'{$endif};
function ScpChSetSafeGroundEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetSafeGroundEnabled'{$endif};
function ScpChGetSafeGroundThresholdMin( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetSafeGroundThresholdMin'{$endif};
function ScpChGetSafeGroundThresholdMax( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetSafeGroundThresholdMax'{$endif};
function ScpChGetSafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChGetSafeGroundThreshold'{$endif};
function ScpChSetSafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ; dThreshold : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChSetSafeGroundThreshold'{$endif};
function ScpChVerifySafeGroundThreshold( hDevice : TLibTiePieHandle ; wCh : Word ; dThreshold : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChVerifySafeGroundThreshold'{$endif};
function ScpChHasTrigger( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChHasTrigger'{$endif};
function ScpChHasTriggerEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChHasTriggerEx'{$endif};
function ScpChTrIsAvailable( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrIsAvailable'{$endif};
function ScpChTrIsAvailableEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; byResolution : Byte ; pChannelEnabled , pChannelTriggerEnabled : PByteBool ; wChannelCount : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrIsAvailableEx'{$endif};
function ScpChTrIsTriggered( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrIsTriggered'{$endif};
function ScpChTrGetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetEnabled'{$endif};
function ScpChTrSetEnabled( hDevice : TLibTiePieHandle ; wCh : Word ; bEnable : ByteBool ) : ByteBool; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetEnabled'{$endif};
function ScpChTrGetKinds( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetKinds'{$endif};
function ScpChTrGetKindsEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetKindsEx'{$endif};
function ScpChTrGetKind( hDevice : TLibTiePieHandle ; wCh : Word ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetKind'{$endif};
function ScpChTrSetKind( hDevice : TLibTiePieHandle ; wCh : Word ; qwTriggerKind : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetKind'{$endif};
function ScpChTrGetLevelModes( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetLevelModes'{$endif};
function ScpChTrGetLevelMode( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetLevelMode'{$endif};
function ScpChTrSetLevelMode( hDevice : TLibTiePieHandle ; wCh : Word ; dwLevelMode : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetLevelMode'{$endif};
function ScpChTrGetLevelCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetLevelCount'{$endif};
function ScpChTrGetLevel( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetLevel'{$endif};
function ScpChTrSetLevel( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dLevel : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetLevel'{$endif};
function ScpChTrGetHysteresisCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetHysteresisCount'{$endif};
function ScpChTrGetHysteresis( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetHysteresis'{$endif};
function ScpChTrSetHysteresis( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dHysteresis : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetHysteresis'{$endif};
function ScpChTrGetConditions( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetConditions'{$endif};
function ScpChTrGetConditionsEx( hDevice : TLibTiePieHandle ; wCh : Word ; dwMeasureMode : LongWord ; qwTriggerKind : UInt64 ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetConditionsEx'{$endif};
function ScpChTrGetCondition( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetCondition'{$endif};
function ScpChTrSetCondition( hDevice : TLibTiePieHandle ; wCh : Word ; dwCondition : LongWord ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetCondition'{$endif};
function ScpChTrGetTimeCount( hDevice : TLibTiePieHandle ; wCh : Word ) : LongWord; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetTimeCount'{$endif};
function ScpChTrGetTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrGetTime'{$endif};
function ScpChTrSetTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrSetTime'{$endif};
function ScpChTrVerifyTime( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrVerifyTime'{$endif};
function ScpChTrVerifyTimeEx2( hDevice : TLibTiePieHandle ; wCh : Word ; dwIndex : LongWord ; dTime : Double ; dwMeasureMode : LongWord ; dSampleFrequency : Double ; qwTriggerKind : UInt64 ; dwCondition : LongWord ) : Double; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpChTrVerifyTimeEx2'{$endif};
function ScpGetData( hDevice : TLibTiePieHandle ; pBuffers : PPSingle ; wChannelCount : Word ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData'{$endif};
function ScpGetData1Ch( hDevice : TLibTiePieHandle ; pBufferCh1 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData1Ch'{$endif};
function ScpGetData2Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData2Ch'{$endif};
function ScpGetData3Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData3Ch'{$endif};
function ScpGetData4Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData4Ch'{$endif};
function ScpGetData5Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData5Ch'{$endif};
function ScpGetData6Ch( hDevice : TLibTiePieHandle ; pBufferCh1 , pBufferCh2 , pBufferCh3 , pBufferCh4 , pBufferCh5 , pBufferCh6 : PSingle ; qwStartIndex , qwSampleCount : UInt64 ) : UInt64; cdecl; external sLibTiePieFileNameDefault {$ifdef MACOS}name '_ScpGetData6Ch'{$endif};
